# venom

./: .clang-format  .gitignore  .gitmodules  AudioProcessor.cpp  CMakeLists-old.txt  CMakeLists.txt  MANIFEST.in  Makefile  MyClass.cpp  MyClass.h  MyClassAltered.h  PyAudioProcessor.py  README.md  build.py  create_plugin.cpp  dist  main.cpp  make_plugin.py  my_altered_class.py  requirements.txt  setup.py  todo.md  venom.yaml
.github/workflows/: main.yml  vst3_validator.yml
Writerside/: d.tree  redirection-rules.xml
Writerside/topics/: Architecture.md  Boilerplate-JUCE-project.md  CLI-tool.md  Extending.md  JUCE-bindings.md  Project-structure.md  Pythonic-API.md  README.md  Test-plugin.md  Testing.md  VENOM-Project-Structure.md
example/: plugin.py  venom.yaml
example/test/: plugin.py  venom.yaml
src/cpp/: create_plugin.cpp  juce.cpp
src/cpp/AudioProcessor/: AudioProcessor.cpp  PyAudioProcessor.h
src/cpp/juce_audio_processors/: juce_audio_processors.cpp  juce_audio_processors.h
src/cpp/juce_audio_processors/AudioProcessor/: AudioProcessor.cpp  PyAudioProcessor.h
src/cpp/juce_audio_processors/AudioProcessorEditor/: AudioProcessorEditor.cpp
src/cpp/utils/: utils.h
src/python/: PyAudioProcessor.py  setup.py
tests/cpp/: CMakeLists.txt
tests/cpp/juce_audio_processors/: CMakeLists.txt  test_AudioProcessorEditor.cpp
tests/cpp/stubs/: ClassStubs.py  audio_processors_stubs.py
tests/pytest/mocks/: mock_audio_buffer.py
tests/vst3/: CMakeLists.txt  create_plugin.cpp  plugin.py
venom/builder/: __main__.py
venom/builder/boilerplate_plugin_project/: CMakeLists.txt  PyAudioProcessor.h  PyAudioProcessorEditor.h  create_plugin.cpp  extern
venom/builder/tools/: cmake.py  package.py  project.py  template.py
venom/builder/tools/utils/: run.py
venom/builder/utils/: Config.py  package.py  project.py
venom/juce/: CMakeLists.txt  __init__.py  juce.cpp
venom/juce/helpers/: CMakeLists.txt  Initialzier.cpp  MessageManagerHelper.cpp
venom/juce/helpers/include/creation/: MessageManagerHelper.h
venom/juce/helpers/include/initializer/: Initializer.h
venom/juce/juce_audio_processors/: CMakeLists.txt  juce_audio_processors.cpp  juce_audio_processors.h
venom/juce/juce_audio_processors/AudioProcessor/: AudioProcessor.cpp  AudioProcessor.h
venom/juce/juce_audio_processors/AudioProcessorEditor/: AudioProcessorEditor.cpp  AudioProcessorEditor.h
venom/juce/juce_audio_processors/AudioProcessorListener/: AudioProcessorListener.cpp  AudioProcessorListener.h
venom/juce/juce_audio_processors/AudioProcessorParameter/: AudioProcessorParameter.cpp  AudioProcessorParameter.h
venom/juce/juce_audio_processors/AudioProcessorValueTreeState/: AudioProcessorValueTreeState.cpp  AudioProcessorValueTreeState.h
venom/juce/juce_gui_basics/: CMakeLists.txt  juce_gui_basics.cpp  juce_gui_basics.h
venom/juce/juce_gui_basics/ComboBox/: ComboBox.cpp  ComboBox.h
venom/juce/juce_gui_basics/Component/: Component.cpp  Component.h
venom/juce/juce_gui_basics/GroupComponent/: GroupComponent.cpp  GroupComponent.h
venom/juce/juce_gui_basics/ImageButton/: ImageButton.cpp  ImageButton.h
venom/juce/juce_gui_basics/Label/: Label.cpp  Label.h
venom/juce/juce_gui_basics/ProgressBar/: ProgressBar.cpp  ProgressBar.h
venom/juce/juce_gui_basics/Slider/: Slider.cpp  Slider.h
venom/juce/juce_gui_basics/TextEditor/: TextEditor.cpp  TextEditor.h
venom/juce/juce_gui_basics/ToggleButton/: ToggleButton.cpp  ToggleButton.h
venom/juce/juce_gui_basics/Viewport/: Viewport.cpp  Viewport.h
venom/juce/utils/: utils.cpp
venom/python/AudioProcessor/: CMakeLists.txt  PyAudioProcessor.cpp  PyAudioProcessorEditor.cpp
venom/python/AudioProcessor/include/: PyAudioProcessor.h  PyAudioProcessorEditor.h
venom/wrapper/audio/processors/: VAudioBuffer.py  VAudioProcessor.py
